--- a/index.html
+++ b/index.html
@@ -462,10 +462,89 @@
         </div>
       </div>
     </footer>
+
+    <footer class="site-footer bg-black text-secondary py-5">
+      <div class="container">
+        <div class="row gy-5 justify-content-between align-items-start">
+
+          <!-- Left Group -->
+          <div class="col-lg-8">
+            <div class="d-flex flex-wrap gap-5 footer-links-group">
+
+              <!-- Logo -->
+              <div class="me-4">
+                <a href="#" class="text-decoration-none">
+                  <p class="logo">Aurelia Vera</p>
+                </a>
+              </div>
+
+              <!-- Column -->
+              <div>
+                <p class="footer-title">Product</p>
+                <ul class="footer-list">
+                  <li><a href="#">Home</a></li>
+                  <li><a href="#">Support</a></li>
+                  <li><a href="#">Pricing</a></li>
+                  <li><a href="#">Affiliate</a></li>
+                </ul>
+              </div>
+
+              <div>
+                <p class="footer-title">Resources</p>
+                <ul class="footer-list">
+                  <li><a href="#">Company</a></li>
+                  <li><a href="#">Blogs</a></li>
+                  <li><a href="#">Community</a></li>
+                  <li>
+                    <a href="#">
+                      Careers
+                      <span class="badge bg-primary ms-2">We’re hiring!</span>
+                    </a>
+                  </li>
+                  <li><a href="#">About</a></li>
+                </ul>
+              </div>
+
+              <div>
+                <p class="footer-title">Legal</p>
+                <ul class="footer-list">
+                  <li><a href="#">Privacy</a></li>
+                  <li><a href="#">Terms</a></li>
+                </ul>
+              </div>
+
+            </div>
+          </div>
+
+          <!-- Right Group -->
+          <div class="col-lg-4 text-lg-end text-center">
+            <p class="footer-description mx-lg-0 ms-lg-auto mx-auto">
+              Discover timeless luxury crafted for the discerning individual
+            </p>
+
+            <div class="d-flex justify-content-lg-end justify-content-center gap-4 mt-3 footer-socials">
+              <a href="#"><ion-icon name="logo-instagram"></ion-icon></a>
+              <a href="#"><ion-icon name="logo-linkedin"></ion-icon></a>
+              <a href="#"><ion-icon name="logo-twitter"></ion-icon></a>
+              <a href="#"><ion-icon name="logo-youtube"></ion-icon></a>
+            </div>
+
+            <p class="mt-3 small">
+              © 2025 <a href="#" class="text-decoration-none text-light">Aurelia Vera</a>
+            </p>
+          </div>
+
+
+        </div>
+      </div>
+    </footer>
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
       crossorigin="anonymous"
     ></script>
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
   </body>
 </html>
